Fixed compilation with Java 8